fitted background, fixed spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,22 +2,21 @@
   text-align: right;
   padding-right: 30px;
   font-family: "Sixtyfour Convergence";
-  align-items: right;
   padding-top: 5px;
   display: flex;
   flex-direction: column;
   gap: 1px;
 }
 .mainHeaderSol {
-  font-size: 80px;
-  margin: 0;
-  padding: 0;
+  font-size: 110px;
+  margin: 0px;
+  padding: 0px;
   flex-shrink: 5;
   flex-grow: 5;
 }
 .mainHeaderHacker {
-  font-size: 50px;
-  padding: 0;
+  font-size: 55px;
+  padding: 0px;
   flex-shrink: 5;
   flex-grow: 5;
 }
@@ -25,14 +24,14 @@
   text-align: right;
   padding-right: 30px;
   font-family: "Dosis";
-  font-size: 35px;
+  font-size: 30px;
   color: aliceblue;
 }
 body {
-  background-image: url("background.png");
+  background-image: url("/images/background.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 1920px 1020px ;
+  background-size: cover;
 }
 .menu {
   display: flex;
@@ -52,4 +51,7 @@ input {
   padding-bottom: 0px;
   flex-shrink: 5;
   flex-grow: 5;
+}
+p{
+  margin: 0px;
 }
